--- a/GUI/Views/Shared/_Layout.cshtml
+++ b/GUI/Views/Shared/_Layout.cshtml
@@ -92,7 +92,8 @@
 </div>
    
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap-table-1.23.2/dist/bootstrap-table.min.js"></script>
+<script src="~/lib/bootstrap-table-1.23.2/dist/bootstrap-table.min.js"></script>
+<script src="~/lib/bootstrap-table-1.23.2/dist/extensions/mobile/bootstrap-table-mobile.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/fontawesome-6.5.2/js/all.min.js"></script>
 
