--- a/GUI/Views/System/GroupPermission/Index.cshtml
+++ b/GUI/Views/System/GroupPermission/Index.cshtml
@@ -1,3 +1,6 @@
+@{
+ViewData["Title"] = "Group Permission";
+}
 
 <div>
     <div class="title">
@@ -23,6 +26,7 @@
                    data-height="460"
                    data-ajax="getDataTable"
                    data-search="true"
+                   data-mobile-responsive="true"
                    data-side-pagination="server"
                    data-click-to-select="true"
                    data-toolbar="#toolbar">
