--- a/GUI/Views/Category/Shift/Index.cshtml
+++ b/GUI/Views/Category/Shift/Index.cshtml
@@ -1,3 +1,7 @@
+@{
+ViewData["Title"] = "Shift";
+}
+
 <div>
     <div class="title">
         <h2 class="title-content">
@@ -24,6 +28,7 @@
                    data-height="460"
                    data-ajax="getDataTable"
                    data-search="true"
+                   data-mobile-responsive="true"
                    data-side-pagination="server"
                    data-pagination="true"
                    data-click-to-select="true"
