Feat: Add teacher management

--- a/GUI/Views/System/GroupPermission/PopupDetail.cshtml
+++ b/GUI/Views/System/GroupPermission/PopupDetail.cshtml
@@ -39,7 +39,7 @@
             </div>
             <label class="col-sm-2 form-label">Active </label>
             <div class="col-sm-4">
-                <select asp-for="IsActived" asp-items="@SYS_CONFIG.ISACTIVE"></select>
+                <select asp-for="IsActived" asp-items="@SysConfig.IsActive"></select>
             </div>
         </div>
     </div>
