--- a/GUI/Views/Category/Program/Index.cshtml
+++ b/GUI/Views/Category/Program/Index.cshtml
@@ -44,7 +44,7 @@
                 </div>
 
                 <table class="bootstrap-table"
-                       id="ShiftTable"
+                       id="ProgramTable"
                        data-toggle="table"
                        data-height="460"
                        data-ajax="getDataTable"
@@ -60,8 +60,7 @@
                         <th data-formatter="sortTable" data-align="center">No.</th>
                         <th data-field="Id" data-visible="false">ID</th>
                         <th data-field="Name">Name</th>
-                        <th data-field="Time" data-formatter="timeFormatter">Time</th>
-                        <th data-field="Days">Days</th>
+                        <th data-field="Note">Note</th>
                     </tr>
                     </thead>
                 </table>
@@ -77,7 +76,7 @@
 
 <script>
     function getIdSelections() {
-        return $.map($('#ShiftTable').bootstrapTable('getSelections'), function (row) {
+        return $.map($('#ProgramTable').bootstrapTable('getSelections'), function (row) {
             return row.Id
         })
     }
