--- a/GUI/Views/Category/District/PopupView.cshtml
+++ b/GUI/Views/Category/District/PopupView.cshtml
@@ -6,7 +6,7 @@
 
 <div class="modal-content modal-snhcenter" id="modalLoading">
         <div class="modal-header">
-            <h4 class="modal-title">Shift Detail</h4>
+            <h4 class="modal-title">District Detail</h4>
             <button type="button" class="btn-close" onclick="closePopup();" aria-label="Close" data-bs-dimiss="modal"></button>
         </div>
         
@@ -27,7 +27,7 @@
 
 <script>
     $(document).ready(function () {
-        $("#frmShift").find("span.field-validation-valid").hide();
+        $("#frmDistrict").find("span.field-validation-valid").hide();
     })
     
     function closePopup() {
