Feat: Add base for client

--- a/CLIENT/src/app/pages/system/login/login.component.html
+++ b/CLIENT/src/app/pages/system/login/login.component.html
@@ -37,10 +37,5 @@
     </form>
   </div>
   </div>
-
-  <div id="pageLoading" role="status">
-    <div class="spinner-border" role="status">
-      <span class="visually-hidden">Loading...</span>
-    </div>
-  </div>
+  <p-toast position="bottom-right" />
 </body>
