--- a/CLIENT/src/styles.scss
+++ b/CLIENT/src/styles.scss
@@ -1,8 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+@import "primeicons/primeicons.css";
 
 body {
   font-family: "Nunito Sans", sans-serif;
